# Linear-Algebra

./: .gitignore  CMakeLists.txt  README.md
include/: LinearAlgebraConfig.h.in  Matrix.h  TestLib.h  a.out  dimension_to_high_exception.h  dimension_to_low_exception.h  lin_vector.h  unequal_dimensions_exception.h  vector.h
src/: .test_vector.cpp.swp  CMakeLists.txt  Doxyfile.in  MatrixTest.cxx  TestLib.cxx  TestMatrix.cxx  VectorTest.cxx  doc_script.cmake  mainpage.dox  test_vector.cpp  vector.hxx
test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  a.out  cmake_install.cmake  test_vector.cpp
test/Testing/Temporary/: CTestCostData.txt
